# lazylog

./: CLAUDE.md  Cargo.toml  LOG_SAMPLES.md  PLAN.md  README.md  REFACTORING.md  SKILL.md  TODO.md  WORKSPACE.md  release.sh
.claude/: settings.local.json
.codebase/pipelines/: build.yml
.github/workflows/: ci.yml  rust.yml
lazylog-android/: Cargo.toml
lazylog-android/src/: lib.rs  parser.rs  provider.rs
lazylog-bin/: Cargo.toml
lazylog-bin/src/: main.rs
lazylog-dyeh/: Cargo.toml  README.md
lazylog-dyeh/src/: file_finder.rs  formatter.rs  lib.rs  parser.rs  provider.rs
lazylog-framework/: Cargo.toml  README.md
lazylog-framework/examples/: file.rs  simple.rs  structured.rs
lazylog-framework/src/: app.rs  app_block.rs  content_line_maker.rs  filter.rs  lib.rs  log_list.rs  log_parser.rs  status_bar.rs  theme.rs  ui_logger.rs
lazylog-framework/src/app/: events.rs  mod.rs  render.rs  scrolling.rs  selection.rs
lazylog-framework/src/provider/: log_item.rs  mod.rs
lazylog-ios/: Cargo.toml
lazylog-ios/src/: decoder.rs  formatter.rs  lib.rs  parser.rs  provider.rs
lazylog-parser/: Cargo.toml
lazylog-parser/src/: lib.rs
src/: app.rs  app_block.rs  content_line_maker.rs  file_finder.rs  lib.rs  log_parser.rs  log_provider.rs  main.rs  scrolling_test.rs  status_bar.rs  theme.rs
src/dyeh/: mod.rs  parser.rs  provider.rs
