[workspace]
resolver = "2"
members = [
    "lazylog-framework",
    "lazylog-parser",
    "lazylog-dyeh",
    "lazylog-ios",
    "lazylog-android",
    "lazylog-bin",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Ruitian Yang"]

[workspace.dependencies]
# Framework dependencies
anyhow = "1.0.99"
arboard = "3.4.1"
chrono = "0.4"
color-eyre = "0.6.5"
crossterm = "0.29.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4"
once_cell = "1.21.3"
ratatui = "0.29.0"
rayon = "1.10"
regex = "1.11.2"
ringbuf = "0.4"
simplelog = "0.12"
unicode-width = "0.2.0"
uuid = { version = "1.18.1", features = ["v4"] }

# DYEH-specific dependencies
dirs = "6.0.0"
libc = "0.2.175"
memmap2 = "0.9.8"
notify = "8.2.0"

# iOS-specific dependencies
tokio = { version = "1", features = ["full"] }
