[package]
name = "lazylog"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Terminal Log Viewer Framework"
publish = false                               # Don't publish to crates.io

[[bin]]
name = "lazylog"
path = "src/main.rs"

[dependencies]
lazylog-framework = { path = "../lazylog-framework" }
lazylog-dyeh = { path = "../lazylog-dyeh" }
lazylog-ios = { path = "../lazylog-ios" }
lazylog-android = { path = "../lazylog-android" }
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
