[package]
name = "lazylog-dyeh"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DYEH log provider for lazylog (internal)"
publish = false  # Don't publish to crates.io

[lib]
name = "lazylog_dyeh"
path = "src/lib.rs"

[dependencies]
lazylog-framework = { path = "../lazylog-framework" }
lazylog-parser = { path = "../lazylog-parser" }
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
memmap2.workspace = true
regex.workspace = true
