[package]
name = "lazylog-ios"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# framework
lazylog-framework = { path = "../lazylog-framework" }

# workspace dependencies
anyhow.workspace = true
log.workspace = true

# iOS-specific dependencies
tokio = { version = "1", features = ["full"] }
idevice = { version = "0.1", features = ["usbmuxd", "syslog_relay", "pair"] }
