[package]
name = "lazylog-ios"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# framework
lazylog-framework = { path = "../lazylog-framework" }

# workspace dependencies
anyhow.workspace = true
log.workspace = true

# async runtime for spawning command-line tools
tokio = { version = "1", features = ["full"] }
